--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "architecture": "all",
     "description": "Listen to your device sensors",
-    "framework": "ubuntu-sdk-14.10-dev2",
+    "framework": "ubuntu-sdk-15.04-qml",
     "hooks": {
         "SensorsStatus": {
             "apparmor": "SensorsStatus.json",
@@ -11,5 +11,5 @@
     "maintainer": "Yohan Boniface <hi@yohanboniface.me>",
     "name": "me.yohanboniface.sensorsstatus",
     "title": "Sensors Status",
-    "version": "0.0.2"
+    "version": "0.0.4"
 }
